create migration specification
